[package]
name = "sentiment_analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
tokenizers = "0.15.0"
finalfusion = "0.18.0"
csv = "1.1"
serde = { version = "1.0", features = ["derive"]}
tch = "0.15.0"


